# medical-image-enhancement-system

./: .gitignore  mkdocs.yml  pyproject.toml
configs/: config.py  dataset_config.py  inference.yaml  sim_inference.yaml  train.yaml
docs/: index.md
docs/api/: datasets.md  image_processing.md  logger.md  models.md  noise_gen.md  trainers.md
docs/user_guide/: installation.md  overview.md
docs/user_guide/concepts/: ct_denoising.md  logging.md  noise2noise.md
docs/user_guide/deployment/: docker.md  real_time.md
scripts/: inference.py  simulate_inference.py  train.py
scripts/tests/: test_loader.py  test_noise.py  test_noise_compounding.py
src/datasets/: dataset.py  make_dataset.py  preparation.py
src/evaluation/: metrics.py
src/models/: noise2noise.py  wrappers.py
src/trainers/: engine.py  n2n.py
src/transforms/: noise.py
src/utils/: factories.py  image_operations.py  logger.py  logging_utils.py  visualization.py
tests/: test_loader.py  test_noise.py  test_noise_compounding.py
