[project]
name = "medical-image-enhancement-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "draccus>=0.11.5",
    "matplotlib>=3.10.8",
    "netcdf4",
    "pillow>=12.0.0",
    "scikit-image>=0.26.0",
    "tensorboard>=2.20.0",
    "torch",
    "torchaudio",
    "torchmetrics>=1.0.3",
    "torchvision",
    "tqdm>=4.66.5",
    "wandb>=0.24.2",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = [
  "https://download.pytorch.org/whl/cu130"
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-toggle-sidebar-plugin>=0.0.9",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.20.1",
]
